--- a/Example.ipynb
+++ b/Example.ipynb
@@ -1,12 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Team Ratings\n",
+    "\n",
+    "Build team ratings by updating an Elo-based system over 2+ seasons of Premier League data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import date\n",
+    "from typing import Tuple\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
@@ -23,7 +33,9 @@
    "source": [
     "Load the match summary data\n",
     "\n",
-    "Competition scorelines and expected goals data can be downloaded from [fbref](https://fbref.com) using [autoscout](https://github.com/olliestanley/autoscout/)"
+    "Competition scorelines and expected goals data can be downloaded from [fbref](https://fbref.com) using [autoscout](https://github.com/olliestanley/autoscout/)\n",
+    "\n",
+    "Some matches for the current season have not been played yet so we filter these out by removing any matches which do not have a `referee` listed. We also split the `score` column into two separate ones, namely `home_goals` and `away_goals`"
    ]
   },
   {
@@ -48,7 +60,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Develop a rating system"
+    "Develop a rating system using the code provided in `ratings.team`\n",
+    "\n",
+    "This will update the ratings for all matches in the dataset, and fit a forecasting model to generate win, draw, and loss probabilities from a match prediction"
    ]
   },
   {
@@ -75,7 +89,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Different systems tracking performance over different time scales"
+    "Define the parameters for the system and create it - these may not be the optimal parameters but I have found them to produce reasonable results\n",
+    "\n",
+    "Higher `k` values cause the ratings to place more weight on recent matches\n",
+    "\n",
+    "Higher `baseline` values cause the system to overall predict higher scores (more total goals in a game)\n",
+    "\n",
+    "Higher `home_advantage` values cause predictions to be more generous to home teams, which can also alter ratings as these are determined by difference between expected and real performance"
    ]
   },
   {
@@ -84,17 +104,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "k = 64\n",
     "baseline = 2.8\n",
     "home_advantage = 0.06\n",
     "\n",
-    "system = ratings(df, 64, baseline, home_advantage, 1000)"
+    "system = ratings(df, k, baseline, home_advantage, 1000)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use the system to predict"
+    "Define a function to predict a match using a given `DataFrame`, `RatingSystem`, teams, and date"
    ]
   },
   {
@@ -103,7 +124,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict_match_as_of(df, system, home_team, away_team, date_str):\n",
+    "def predict_match_as_of(\n",
+    "    df: pd.DataFrame, system: RatingSystem, home_team: str, away_team: str, date_str: str\n",
+    ") -> Tuple[float, float]:\n",
     "    home_att, home_def = system.get_team_ratings_before_date(\n",
     "        df, home_team, date_str\n",
     "    )\n",
@@ -112,11 +135,18 @@
     "        df, away_team, date_str\n",
     "    )\n",
     "\n",
-    "    home_pred, away_pred = system.predict_match_from_ratings(\n",
+    "    return system.predict_match_from_ratings(\n",
     "        home_att, home_def, away_att, away_def\n",
-    "    )\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Specify the teams and date to predict - change this cell to predict a different match\n",
     "\n",
-    "    return home_pred, away_pred"
+    "If manually inputting dates, use the format \"YYYY-MM-DD\""
    ]
   },
   {
@@ -125,7 +155,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Change these values to alter the match to predict\n",
     "home_team = \"Manchester Utd\"\n",
     "away_team = \"Brighton\"\n",
     "date_str = str(date.today())"
@@ -135,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Predict results based on long term performance"
+    "Predict results based on the system created and turn the predictions into result probabilities"
    ]
   },
   {
@@ -158,7 +187,14 @@
     "home_pred, away_pred = predict_match_as_of(df, system, home_team, away_team, date_str)\n",
     "print(f\"\\nPredicted xG: {home_team} {round(home_pred, 2)} - {round(away_pred, 2)} {away_team}\")\n",
     "home_prob, draw_prob, away_prob = system.forecast_match_from_predictions(home_pred, away_pred)[0]\n",
-    "print(f\"Win Probabilities: {home_team} {round(home_prob, 3)} - Draw {round(draw_prob, 3)} - {away_team} {round(away_prob, 3)}\")"
+    "print(f\"Probabilities: {home_team} {round(home_prob, 3)} - Draw {round(draw_prob, 3)} - {away_team} {round(away_prob, 3)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Done!"
    ]
   }
  ],
